Basic Filters are working on Insert (That was easy)